--- a/index.html
+++ b/index.html
@@ -1,13 +1,34 @@
 <!DOCTYPE html>
 <html>
-    <title>My Life Timeline</title>
-    <meta charset="utf-8">
-    <ol>
-        <li><a href="biography.html">Biography</a></li>
-        <li><a href="photos.html">Photos</a></li>
-        <li><a href="rashi.html">Rashi</a></li>
-    </ol>
-    <h1>James</h1> <p>This is first draft of personal portfolio website 
-    <img src="Rashi.jpeg" width="100%">
-    </p><p style="margin-top:45px;"></p>
+    <head>
+        <title>My Life Timeline</title>
+        <meta charset="utf-8">
+        <style> 
+        a {
+            color:red;
+        }
+        </style>
+    </head>
+    <!--
+    <body>
+        <ol>
+            <li><a href="biography.html">Biography</a></li>
+            <li><a href="photos.html">Photos</a></li>
+            <li><a href="rashi.html">Rashi</a></li>
+        </ol>
+        <h1>James</h1> <p>This is first draft of personal portfolio website 
+        <img src="Rashi.jpeg" width="100%">
+        </p><p style="margin-top:45px;"></p>
+    </body>
+    -->
+    <body>
+        <ol>
+            <li><a href="biography.html">Biography</a></li>
+            <li><a href="photos.html">Photos</a></li>
+            <li><a href="rashi.html">Rashi</a></li>
+        </ol>
+        <h1>James</h1> <p>This is first draft of personal portfolio website 
+        <img src="Rashi.jpeg" width="100%">
+        </p><p style="margin-top:45px;"></p>
+    </body>
 </html>
