editted with adding css

--- a/rashi.html
+++ b/rashi.html
@@ -1,15 +1,32 @@
 <!DOCTYPE html>
 <html>
-    <title>My Life Timeline</title>
-    <meta charset="utf-8">
-    
-    <ol>
-        <li><a href="biography.html">Biography</a></li>
-        <li><a href="photos.html">Photos</a></li>
-        <li><a href="rashi.html">Rashi</a></li>
-    </ol>
-    <h1>James</h1> <p>
-    <img src="Rashi.jpeg" width="100%">
-    </p><p style="margin-top:45px;">
-    </p>
+    <head>
+        <title>My Life Timeline</title>
+        <meta charset="utf-8">
+        <style>
+            #active {
+                color: slateblue;
+            }
+            a {
+                color:black;
+                text-decoration: none;
+            }
+            h1 {
+                text-align: center;
+                color:slateblue
+            }   
+        </style>
+        
+    </head>
+    <body>
+        <ul>
+            <li><a href="biography.html">Biography</a></li>
+            <li><a href="photos.html">Photos</a></li>
+            <li><a href="rashi.html" id="active"> Rashi</a></li>
+        </ul>
+        <h1>Rashi</h1> <p>
+        <img src="Rashi.jpeg" width="100%">
+        </p><p style="margin-top:45px;">Rashi was adopted to our family on January 15th, 2021, from a dog shelter. She has a very chilling and careful personality.
+        </p>
+    </body>
 </html>
