--- a/index.html
+++ b/index.html
@@ -3,32 +3,16 @@
     <head>
         <title>My Life Timeline</title>
         <meta charset="utf-8">
-        <style> 
-        a {
-            color:red;
-        }
-        </style>
+        <link href="style.css" rel="stylesheet">
     </head>
-    <!--
     <body>
-        <ol>
-            <li><a href="biography.html">Biography</a></li>
-            <li><a href="photos.html">Photos</a></li>
-            <li><a href="rashi.html">Rashi</a></li>
-        </ol>
-        <h1>James</h1> <p>This is first draft of personal portfolio website 
-        <img src="Rashi.jpeg" width="100%">
-        </p><p style="margin-top:45px;"></p>
-    </body>
-    -->
-    <body>
-        <ul>
-            <li><a href="biography.html">Biography</a></li>
-            <li><a href="photos.html">Photos</a></li>
-            <li><a href="rashi.html">Rashi</a></li>
-        </ul>
-        <h1>James</h1> <p>This is first draft of personal portfolio website 
-        <img src="Rashi.jpeg" width="100%">
-        </p><p style="margin-top:45px;"></p>
+        <h1>My Biography</h1> 
+        <div id = grid>
+            <dl>
+                <li><a href="biography.html">Biography</a></li>
+                <li><a href="photos.html">Photos</a></li>
+                <li><a href="rashi.html"> Rashi</a></li>
+            </dl> 
+        </div>
     </body>
 </html>
