--- a/photos.html
+++ b/photos.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html>
-    <title>My Life Timeline</title>
-    <meta charset="utf-8">
-    <ul>
-        <li><a href="biography.html">Biography</a></li>
-        <li><a href="photos.html">Photos</a></li>
-        <li><a href="rashi.html">Rashi</a></li>
-    </ul>
-    <h1>James</h1> <p>
-    <img src="Rashi.jpeg" width="100%">
-    </p><p style="margin-top:45px;">
-    </p>
+    <head>
+        <title>My Life Timeline</title>
+        <meta charset="utf-8">
+        <link href="style.css" rel="stylesheet">
+    </head>
+    <body>
+        <h1>Photos</h1> 
+        <div id = grid>
+            <dl>
+                <li><a href="biography.html">Biography</a></li>
+                <li><a href="photos.html" id="active">Photos</a></li>
+                <li><a href="rashi.html"> Rashi</a></li>
+            </dl> 
+        </div>
+    </body>
 </html>
