--- a/rashi.html
+++ b/rashi.html
@@ -3,46 +3,7 @@
     <head>
         <title>My Life Timeline</title>
         <meta charset="utf-8">
-        <style>
-            body{
-                margin:0;
-                background-color:antiquewhite;
-            }
-            #active {
-                color: slateblue;
-            }
-            a {
-                color:black;
-                text-decoration: none;
-            }
-            h1 {
-                text-align: center;
-                color:slateblue;
-                border-bottom: 1px solid slateblue;
-                padding-bottom: 20px;
-                padding-top: 20px;
-                margin: 0;
-            }   
-            dl {
-                border-right:1px solid slateblue;
-                width:100%;
-                margin:0;
-                padding-left: 20px;
-                padding-top: 20px;
-            }
-            #grid {
-                display: grid;
-                grid-template-columns: 1fr 2fr;
-                justify-content: center;
-                margin: 0;
-            }
-            #rashi {
-                place-self: center;
-                align-content: center;
-                width:60%;
-                margin: 20px;
-            }
-        </style>
+        <link href="style.css" rel="stylesheet">
     </head>
     <body>
         <h1>Rashi</h1> 
