modified the structure

--- a/rashi.html
+++ b/rashi.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>My Life Timeline</title>
+        <title>Rashi</title>
         <meta charset="utf-8">
         <link href="style.css" rel="stylesheet">
     </head>
@@ -15,32 +15,31 @@
             </dl> 
             <span id = rashi> 
                 <div>
-                    <p>
-                    <img src="Rashi1.jpeg" width="100%">
-                    </p><p style="margin-top:15px;">Rashi was adopted to our family on January 15th, 2021, from a dog shelter. She has a very chilling and careful personality.
+                    <img src="Rashi1.jpeg" class = "photo">
+                    <p style="margin-top:15px;">Rashi was adopted to our family on January 15th, 2021, from a dog shelter. She has a very chilling and careful personality. We predict that she was born in around December, 2020.
                     </p>
                 </div>
                 <div>
                     <p>
-                        <img src="Rashi3.jpeg" width="100%" style="margin-top: 25px;">
+                        <img src="Rashi3.jpeg" class = "photo">
                     </p><p style="margin-top:15px;">On the first day she came to our place, it took awhile for her to come out of the cage.
                     </p>
                 </div>
                 <div>
                     <p>
-                        <img src="Rashi2.jpeg" width="100%" style="margin-top: 25px;">
+                        <img src="Rashi2.jpeg" class = "photo">
                     </p><p style="margin-top:15px;">First thing we did for her was to shave off her untrimmed hair. Her thigh looked like a chicken thigh ever since then.
                     </p>
                 </div>
                 <div>
                     <p>
-                        <img src="Rashi.jpeg" width="100%" style="margin-top: 25px">
+                        <img src="Rashi.jpeg" class = "photo">
                     </p><p style="margin-top:15px;">Later she got used to living in a new place. We even brought her to a beach.
                     </p>
                 </div>
                 <div>
                     <p>
-                        <img src="Rashi4.jpeg" width="100%" style="margin-top: 25px">
+                        <img src="Rashi4.jpeg" class = "photo">
                     </p><p style="margin-top:15px;">Hope she is enjoying her life at a new place
                     </p>
                 </div>
