--- a/biography.html
+++ b/biography.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>My Life Timeline</title>
+        <title>Biography</title>
         <meta charset="utf-8">
         <link href="style.css" rel="stylesheet">
     </head>
