added new photo

--- a/rashi.html
+++ b/rashi.html
@@ -38,9 +38,15 @@
                     </p>
                 </div>
                 <div>
-                    <p>
-                        <img src="Rashi4.jpeg" class = "photo">
-                    </p><p style="margin-top:15px;">Hope she is enjoying her life at a new place
+                    <span>
+                        <p>
+                            <img src="Rashi4.jpeg" class = "photo">
+                        </p>
+                        <p>
+                            <img src="Rashi5.jpeg" class = "photo">
+                        </p>
+                    </span>
+                    <p style="margin-top:15px;">Hope she is enjoying her life at a new place
                     </p>
                 </div>
                 <iframe width="100%" src="https://www.youtube.com/embed/HasI05RN6tE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
