--- a/rashi.html
+++ b/rashi.html
@@ -6,7 +6,10 @@
         <link href="style.css" rel="stylesheet">
     </head>
     <body>
-        <h1>Rashi</h1> 
+        <h1>
+            Rashi
+            <img src="footprint.png" width = "5%">
+        </h1> 
         <div id = grid>
             <dl>
                 <li><a href="biography.html">Biography</a></li>
