redesigned the website

--- a/biography.html
+++ b/biography.html
@@ -12,6 +12,7 @@
                 <li><a href="biography.html" id="active">Biography</a></li>
                 <li><a href="photos.html">Photos</a></li>
                 <li><a href="rashi.html"> Rashi</a></li>
+                <li><a href="games.html"> Games</a></li>
             </dl> 
         </div>
     </body>
