--- a/photos.html
+++ b/photos.html
@@ -12,6 +12,7 @@
                 <li><a href="biography.html">Biography</a></li>
                 <li><a href="photos.html" id="active">Photos</a></li>
                 <li><a href="rashi.html"> Rashi</a></li>
+                <li><a href="games.html"> Games</a></li>
             </dl> 
         </div>
     </body>
