--- a/rashi.html
+++ b/rashi.html
@@ -15,6 +15,7 @@
                 <li><a href="biography.html">Biography</a></li>
                 <li><a href="photos.html">Photos</a></li>
                 <li><a href="rashi.html" id="active"> Rashi</a></li>
+                <li><a href="games.html"> Games</a></li>
             </dl> 
             <span id = rashi> 
                 <div>
