--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
                 <li><a href="biography.html">Biography</a></li>
                 <li><a href="photos.html">Photos</a></li>
                 <li><a href="rashi.html"> Rashi</a></li>
+                <li><a href="games.html"> Games</a></li>
             </dl> 
         </div>
     </body>
 </html>
+
+
