--- a/rashi.html
+++ b/rashi.html
@@ -8,7 +8,7 @@
     <body>
         <h1>
             Rashi
-            <img src="footprint.png" width = "5%">
+            <img src="footprint.png" width = "60px">
         </h1> 
         <div id = grid>
             <dl>
@@ -17,44 +17,38 @@
                 <li><a href="rashi.html" id="active"> Rashi</a></li>
                 <li><a href="games.html"> Games</a></li>
             </dl> 
-            <span id = rashi> 
-                <div>
-                    <img src="images/rashi/Rashi1.jpeg" class = "photo" >
-                    <p style="margin-top:15px;">Rashi was adopted to our family on January 15th, 2021, from a dog shelter. She has a very chilling and careful personality. We predict that she was born in around December, 2020.
-                    </p>
-                </div>
-                <div>
-                    <p>
+            <div id = rashi> 
+                <div id = column>
+                    <figure>
+                        <img src="images/rashi/Rashi1.jpeg" class = "photo" >
+                        <figcaption>Rashi was adopted to our family on January 15th, 2021, from a dog shelter. She has a very chilling and careful personality. We predict that she was born in around December, 2020.
+                        </figcaption>
+                    </figure>
+                    <figure>
                         <img src="images/rashi/Rashi3.jpeg" class = "photo">
-                    </p><p style="margin-top:15px;">On the first day she came to our place, it took awhile for her to come out of the cage.
-                    </p>
-                </div>
-                <div>
-                    <p>
+                        <figcaption>On the first day she came to our place, it took awhile for her to come out of the cage.
+                        </figcaption>
+                    </figure>
+                    <figure>
                         <img src="images/rashi/Rashi2.jpeg" class = "photo">
-                    </p><p style="margin-top:15px;">First thing we did for her was to shave off her untrimmed hair. Her thigh looked like a chicken thigh ever since then.
-                    </p>
-                </div>
-                <div>
-                    <p>
+                        <figcaption>First thing we did for her was to shave off her untrimmed hair. Her thigh looked like a chicken thigh ever since then.
+                        </figcaption>
+                    </figure>
+                    <figure>
                         <img src="images/rashi/Rashi.jpeg" class = "photo">
-                    </p><p style="margin-top:15px;">Later she got used to living in a new place. We even brought her to a beach.
-                    </p>
+                        <figcaption>Later she got used to living in a new place. We even brought her to a beach.
+                        </figcaption>
+                    </figure>
+                        <figure>
+                        <img src="images/rashi/Rashi4.jpeg" class = "photo">
+                        <img src="images/rashi/Rashi5.jpeg" class = "photo">   
+                        <figcaption>Hope she is enjoying her life at a new place
+                        </figcaption>
+                    </figure>
+                    <div class= "videoWrapper"> <iframe class = video src="https://www.youtube.com/embed/HasI05RN6tE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="padding-top: 5%;"></iframe></div>
+                    <div class= "videoWrapper"> <iframe class = video src="https://www.youtube.com/embed/eNQgOHjNYZE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="padding-top: 5%;"></iframe></div>
                 </div>
-                <div>
-                    <span>
-                        <p>
-                            <img src="images/rashi/Rashi4.jpeg" class = "photo">
-                        </p>
-                        <p>
-                            <img src="images/rashi/Rashi5.jpeg" class = "photo">
-                        </p>
-                    </span>
-                    <p style="margin-top:15px;">Hope she is enjoying her life at a new place
-                    </p>
-                </div>
-                <iframe width="100%" src="https://www.youtube.com/embed/HasI05RN6tE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </span>
+            </div>
         </div>
     </body>
 </html>
