changed font of the title

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <title>My Life Timeline</title>
         <meta charset="utf-8">
         <link href="style.css" rel="stylesheet">
+        <link href='https://fonts.googleapis.com/css?family=Berkshire Swash' rel='stylesheet'>
+
     </head>
     <body>
         <h1>My Biography</h1> 
