--- a/photos.html
+++ b/photos.html
@@ -4,6 +4,8 @@
         <title>Photos</title>
         <meta charset="utf-8">
         <link href="style.css" rel="stylesheet">
+        <link href='https://fonts.googleapis.com/css?family=Berkshire Swash' rel='stylesheet'>
+
     </head>
     <body>
         <h1>Photos</h1> 
