--- a/rashi.html
+++ b/rashi.html
@@ -4,6 +4,7 @@
         <title>Rashi</title>
         <meta charset="utf-8">
         <link href="style.css" rel="stylesheet">
+        <link href='https://fonts.googleapis.com/css?family=Berkshire Swash' rel='stylesheet'>
     </head>
     <body>
         <h1>
