--- a/biography.html
+++ b/biography.html
@@ -8,7 +8,9 @@
 
     </head>
     <body>
-        <h1>My Biography</h1> 
+        <h1>My Biography
+            <img src="images/biography.jpeg" width = "40px">
+        </h1> 
         <div id = grid>
             <dl>
                 <li><a href="biography.html" id="active">Biography</a></li>
