--- a/photos.html
+++ b/photos.html
@@ -8,7 +8,9 @@
 
     </head>
     <body>
-        <h1>Photos</h1> 
+        <h1>Photos
+            <img src="images/camera.png" width = "60px">
+        </h1> 
         <div id = grid>
             <dl>
                 <li><a href="biography.html">Biography</a></li>
