--- a/games.html
+++ b/games.html
@@ -8,7 +8,9 @@
 
     </head>
     <body>
-        <h1>Games</h1> 
+        <h1>Games
+            <img src="images/game.png" width = "60px">
+        </h1> 
         <div id = grid>
             <dl>
                 <li><a href="biography.html">Biography</a></li>
