--- a/rashi.html
+++ b/rashi.html
@@ -9,7 +9,7 @@
     <body>
         <h1>
             Rashi
-            <img src="footprint.png" width = "60px">
+            <img src="images/paw.png" width = "60px">
         </h1> 
         <div id = grid>
             <dl>
