changed title background

--- a/photos.html
+++ b/photos.html
@@ -13,10 +13,11 @@
         </h1> 
         <div id = grid>
             <dl>
-                <li><a href="biography.html">Biography</a></li>
+                <li><a href="profile.html">Profile</a></li>
                 <li><a href="photos.html" id="active">Photos</a></li>
                 <li><a href="rashi.html"> Rashi</a></li>
                 <li><a href="games.html"> Games</a></li>
+                <li><a href="algorithm.html"> Algorithm</a></li>
             </dl> 
         </div>
     </body>
