--- a/profile.html
+++ b/profile.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Biography</title>
+        <title>profile</title>
         <meta charset="utf-8">
         <link href="style.css" rel="stylesheet">
         <link href='https://fonts.googleapis.com/css?family=Berkshire Swash' rel='stylesheet'>
 
     </head>
     <body>
-        <h1>My Biography
-            <img src="images/biography.jpeg" width = "40px">
+        <h1>My Profile
+            <img src="images/profile.jpeg" width = "40px">
         </h1> 
         <div id = grid>
             <dl>
-                <li><a href="biography.html" id="active">Biography</a></li>
+                <li><a href="profile.html" id="active">Profile</a></li>
                 <li><a href="photos.html">Photos</a></li>
                 <li><a href="rashi.html"> Rashi</a></li>
                 <li><a href="games.html"> Games</a></li>
+                <li><a href="algorithm.html"> Algorithm</a></li>
             </dl> 
         </div>
     </body>
