--- a/rashi.html
+++ b/rashi.html
@@ -13,12 +13,12 @@
         </h1> 
         <div id = grid>
             <dl>
-                <li><a href="biography.html">Biography</a></li>
+                <li><a href="profile.html">Profile</a></li>
                 <li><a href="photos.html">Photos</a></li>
                 <li><a href="rashi.html" id="active"> Rashi</a></li>
                 <li><a href="games.html"> Games</a></li>
+                <li><a href="algorithm.html"> Algorithm</a></li>
             </dl> 
-            <div id = rashi> 
                 <div id = column>
                     <figure>
                         <img src="images/rashi/Rashi1.jpeg" class = "photo" >
@@ -49,7 +49,6 @@
                     <div class= "videoWrapper" style="margin-bottom: 30px;"> <iframe class = video src="https://www.youtube.com/embed/HasI05RN6tE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="padding-top: 5%;"></iframe></div>
                     <div class= "videoWrapper"> <iframe class = video src="https://www.youtube.com/embed/eNQgOHjNYZE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="padding-top: 5%;"></iframe></div>
                 </div>
-            </div>
         </div>
     </body>
 </html>
