--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
 
     </head>
     <body>
-        <h1>My Biography</h1> 
+        <h1>My profile</h1> 
         <div id = grid>
             <dl>
-                <li><a href="biography.html">Biography</a></li>
+                <li><a href="profile.html">Profile</a></li>
                 <li><a href="photos.html">Photos</a></li>
                 <li><a href="rashi.html"> Rashi</a></li>
                 <li><a href="games.html"> Games</a></li>
+                <li><a href="algorithm.html"> Algorithm</a></li>
             </dl> 
         </div>
     </body>
