rephrased some sentences in Rashi

--- a/rashi.html
+++ b/rashi.html
@@ -22,12 +22,12 @@
                 <div id = column>
                     <figure>
                         <img src="images/rashi/Rashi1.jpeg" class = "photo" >
-                        <figcaption>Rashi was adopted to our family on January 15th, 2021, from a dog shelter. She has a very chilling and careful personality. We predict that she was born in around December, 2020.
+                        <figcaption>Rashi joined our family on January 15th, 2021, from a dog shelter. She has a very careful personality. We are predicting that she was born in around December, 2020.
                         </figcaption>
                     </figure>
                     <figure>
                         <img src="images/rashi/Rashi3.jpeg" class = "photo">
-                        <figcaption>On the first day she came to our place, it took awhile for her to come out of the cage.
+                        <figcaption>On the first day she came to our place, it took quite awhile for her to come out of the cage.
                         </figcaption>
                     </figure>
                     <figure>
@@ -43,7 +43,7 @@
                         <figure>
                         <img src="images/rashi/Rashi4.jpeg" class = "photo">
                         <img src="images/rashi/Rashi5.jpeg" class = "photo">   
-                        <figcaption>Hope she is enjoying her life at a new place
+                        <figcaption>Hope she is enjoying her life as a member of our family 😊
                         </figcaption>
                     </figure>
                     <div class= "videoWrapper" style="margin-bottom: 30px;"> <iframe class = video src="https://www.youtube.com/embed/HasI05RN6tE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="padding-top: 5%;"></iframe></div>
