--- a/photos.html
+++ b/photos.html
@@ -9,12 +9,11 @@
     </head>
     <body>
         <h1>Photos
-            <img src="images/camera.png" width = "60px">
+            <img src="images/camera.png" width = "60px" style = "filter: invert();">
         </h1> 
         <div id = grid>
             <dl>
                 <li><a href="profile.html">Profile</a></li>
-                <li><a href="photos.html" id="active">Photos</a></li>
                 <li><a href="rashi.html"> Rashi</a></li>
                 <li><a href="games.html"> Games</a></li>
                 <li><a href="algorithm.html"> Algorithm</a></li>
