--- a/profile.html
+++ b/profile.html
@@ -9,11 +9,10 @@
     </head>
     <body>
         <h1>My Profile
-            <img src="images/profile.jpeg" width = "40px">
+            <img src="images/profile.jpeg" width = "40px" style = "filter: invert();">
         </h1> 
         <div id = grid>
             <dl>
-                <li><a href="profile.html" id="active">Profile</a></li>
                 <li><a href="photos.html">Photos</a></li>
                 <li><a href="rashi.html"> Rashi</a></li>
                 <li><a href="games.html"> Games</a></li>
