--- a/rashi.html
+++ b/rashi.html
@@ -4,18 +4,17 @@
         <title>Rashi</title>
         <meta charset="utf-8">
         <link href="style.css" rel="stylesheet">
-        <link href='https://fonts.googleapis.com/css?family=Berkshire Swash' rel='stylesheet'>
+        <link href='https://fonts.googleapis.com/css?family=Optima' rel='stylesheet'>
     </head>
     <body>
         <h1>
             Rashi
-            <img src="images/paw.png" width = "60px">
+            <img src="images/paw.png" width = "60px" style = "filter: invert();">
         </h1> 
         <div id = grid>
             <dl>
                 <li><a href="profile.html">Profile</a></li>
                 <li><a href="photos.html">Photos</a></li>
-                <li><a href="rashi.html" id="active"> Rashi</a></li>
                 <li><a href="games.html"> Games</a></li>
                 <li><a href="algorithm.html"> Algorithm</a></li>
             </dl> 
