--- a/algorithm.html
+++ b/algorithm.html
@@ -4,8 +4,9 @@
         <title>Photos</title>
         <meta charset="utf-8">
         <link href="style.css" rel="stylesheet">
-        <link href='https://fonts.googleapis.com/css?family=Berkshire Swash' rel='stylesheet'>
-
+        <link href='https://fonts.googleapis.com/css?family=Optima' rel='stylesheet'>
+        <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="/favicon.ico" type="image/x-icon">
     </head>
     <body>
         <h1>Algorithm Studies</h1> 
@@ -15,13 +16,14 @@
                 <li><a href="photos.html">Photos</a></li>
                 <li><a href="rashi.html"> Rashi</a></li>
                 <li><a href="games.html"> Games</a></li>
+
             </dl> 
             <div id = column>
-                <figure> <img src="images/DFS.png" width = 300px;>
+                <figure> <img src="images/algorithm/DFS.png" width = 300px;>
                     <figcaption><span>Depth-first search (DFS)</span> is an algorithm for traversing a tree. It starts traversing from the root node and explores as far as possible along each branch before backtracking. Usually uses <span>stack</span> to find the shortest path. In geeral, DFS is faster than BFS.<br><span>Time complexity: </span> O(V+E)</figcaption>
                     </figure>
                 <figure>
-                    <img src="images/BFS.png" width = 300px;>
+                    <img src="images/algorithm/BFS.png" width = 300px;>
                     <figcaption><span>Breadth-first search (BFS)</span> is an algorithm for searching a tree. It starts traversing from the root node and explores all nodes at the present depth prior to moving on to the nodes at the next depth level. Extra memory, usually a <span>queue</span>, is needed to keep track of the child nodes that were encountered but not yet explored. It is usually a better option when target is closer to source.<br> <span>Time complexity: O(V+E)</span></figcaption>
                 </figure>
             </div>
