--- a/photos.html
+++ b/photos.html
@@ -4,12 +4,12 @@
         <title>Photos</title>
         <meta charset="utf-8">
         <link href="style.css" rel="stylesheet">
-        <link href='https://fonts.googleapis.com/css?family=Berkshire Swash' rel='stylesheet'>
+        <link href='https://fonts.googleapis.com/css?family=Optima' rel='stylesheet'>
 
     </head>
     <body>
         <h1>Photos
-            <img src="images/camera.png" width = "60px" style = "filter: invert();">
+            <img src="images/logo/camera.png" width = "60px" style = "filter: invert();">
         </h1> 
         <div id = grid>
             <dl>
