--- a/profile.html
+++ b/profile.html
@@ -4,12 +4,12 @@
         <title>profile</title>
         <meta charset="utf-8">
         <link href="style.css" rel="stylesheet">
-        <link href='https://fonts.googleapis.com/css?family=Berkshire Swash' rel='stylesheet'>
+        <link href='https://fonts.googleapis.com/css?family=Optima' rel='stylesheet'>
 
     </head>
     <body>
         <h1>My Profile
-            <img src="images/profile.jpeg" width = "40px" style = "filter: invert();">
+            <img src="images/logo/profile.jpeg" width = "40px" style = "filter: invert();">
         </h1> 
         <div id = grid>
             <dl>
