--- a/rashi.html
+++ b/rashi.html
@@ -5,11 +5,16 @@
         <meta charset="utf-8">
         <link href="style.css" rel="stylesheet">
         <link href='https://fonts.googleapis.com/css?family=Optima' rel='stylesheet'>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+        <link rel="stylesheet" href="assets/css/style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
         <h1>
             Rashi
-            <img src="images/paw.png" width = "60px" style = "filter: invert();">
+            <img src="images/logo/paw.png" width = "60px" style = "filter: invert();">
         </h1> 
         <div id = grid>
             <dl>
@@ -48,6 +53,16 @@
                     <div class= "videoWrapper" style="margin-bottom: 30px;"> <iframe class = video src="https://www.youtube.com/embed/HasI05RN6tE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="padding-top: 5%;"></iframe></div>
                     <div class= "videoWrapper"> <iframe class = video src="https://www.youtube.com/embed/eNQgOHjNYZE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="padding-top: 5%;"></iframe></div>
                 </div>
-        </div>
+            </div>
+            <div class="footer-dark">
+                <footer>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col item social"><a href="https://www.facebook.com/jinsang.j.oh/"><i class="icon ion-social-facebook"></i></a><a href="mailto:fldhs2012@gmail.com"><i class="material-icons" style = "vertical-align: -20%">email</i></a><a href="https://www.linkedin.com/in/james-oh-b41a82215/"><i class="fa fa-linkedin-square"></i></a></div>
+                        </div>
+                        <p class="copyright">Jinsang Oh © 2022</p>
+                    </div>
+                </footer>
+            </div>
     </body>
 </html>
