--- a/games.html
+++ b/games.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Photos</title>
-        <meta charset="utf-8">
-        <link href="style.css" rel="stylesheet">
-        <link href='https://fonts.googleapis.com/css?family=Berkshire Swash' rel='stylesheet'>
-
-    </head>
     <body>
+        <head>
+            <title>Jinsang Oh</title>
+            <meta charset="utf-8">
+            <link href="style.css" rel="stylesheet">
+            <link href='https://fonts.googleapis.com/css?family=Optima' rel='stylesheet'>
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+            <link rel="stylesheet" href="assets/css/style.css">
+            <meta name="viewport" content="width=device-width, initial-scale=1">
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        </head>
         <h1>Games
-            <img src="images/game.png" width = "60px">
+            <img src="images/logo/game.png" width = "60px">
         </h1> 
         <div id = grid>
             <dl>
@@ -19,5 +22,18 @@
                 <li><a href="algorithm.html"> Algorithm</a></li>
             </dl> 
         </div>
+        <div class="footer-dark">
+            <footer>
+                <div class="container">
+                    <div class="row">
+                        <div class="col item social"><a href="https://www.facebook.com/jinsang.j.oh/"><i class="icon ion-social-facebook"></i></a><a href="https://www.linkedin.com/in/james-oh-b41a82215/"><i class="fa fa-linkedin-square"></i></a></div>
+                    </div>
+                    <p class="copyright">Jinsang Oh © 2022</p>
+                </div>
+            </footer>
+        </div>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
     </body>
+    
 </html>
