--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
         <title>My Life Timeline</title>
         <meta charset="utf-8">
         <link href="style.css" rel="stylesheet">
-        <link href='https://fonts.googleapis.com/css?family=Berkshire Swash' rel='stylesheet'>
-
+        <link href='https://fonts.googleapis.com/css?family=Optima' rel='stylesheet'>
     </head>
     <body>
-        <h1>My profile</h1> 
+        <h1>Jinsang Oh</h1> 
         <div id = grid>
             <dl>
                 <li><a href="profile.html">Profile</a></li>
