--- a/algorithm.html
+++ b/algorithm.html
@@ -5,8 +5,10 @@
         <meta charset="utf-8">
         <link href="style.css" rel="stylesheet">
         <link href='https://fonts.googleapis.com/css?family=Optima' rel='stylesheet'>
-        <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-        <link rel="icon" href="/favicon.ico" type="image/x-icon">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+        <link rel="stylesheet" href="assets/css/style.css">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
         <h1>Algorithm Studies</h1> 
@@ -27,6 +29,16 @@
                     <figcaption><span>Breadth-first search (BFS)</span> is an algorithm for searching a tree. It starts traversing from the root node and explores all nodes at the present depth prior to moving on to the nodes at the next depth level. Extra memory, usually a <span>queue</span>, is needed to keep track of the child nodes that were encountered but not yet explored. It is usually a better option when target is closer to source.<br> <span>Time complexity: O(V+E)</span></figcaption>
                 </figure>
             </div>
+        </div>
+        <div class="footer-dark">
+            <footer>
+                <div class="container">
+                    <div class="row">
+                        <div class="col item social"><a href="https://www.facebook.com/jinsang.j.oh/"><i class="icon ion-social-facebook"></i></a><a href="mailto:fldhs2012@gmail.com"><i class="material-icons" style = "vertical-align: -20%">email</i></a><a href="https://www.linkedin.com/in/james-oh-b41a82215/"><i class="fa fa-linkedin-square"></i></a></div>
+                    </div>
+                    <p class="copyright">Jinsang Oh © 2022</p>
+                </div>
+            </footer>
         </div>
     </body>
 </html>
