--- a/games.html
+++ b/games.html
@@ -8,7 +8,7 @@
             <link href='https://fonts.googleapis.com/css?family=Optima' rel='stylesheet'>
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
             <link rel="stylesheet" href="assets/css/style.css">
-            <meta name="viewport" content="width=device-width, initial-scale=1">
+            <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         </head>
         <h1>Games
@@ -26,14 +26,12 @@
             <footer>
                 <div class="container">
                     <div class="row">
-                        <div class="col item social"><a href="https://www.facebook.com/jinsang.j.oh/"><i class="icon ion-social-facebook"></i></a><a href="https://www.linkedin.com/in/james-oh-b41a82215/"><i class="fa fa-linkedin-square"></i></a></div>
+                        <div class="col item social"><a href="https://www.facebook.com/jinsang.j.oh/"><i class="icon ion-social-facebook"></i></a><a href="mailto:fldhs2012@gmail.com"><i class="material-icons" style = "vertical-align: -20%">email</i></a><a href="https://www.linkedin.com/in/james-oh-b41a82215/"><i class="fa fa-linkedin-square"></i></a></div>
                     </div>
                     <p class="copyright">Jinsang Oh © 2022</p>
                 </div>
             </footer>
         </div>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
     </body>
     
 </html>
