fixed UI issues

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>My Life Timeline</title>
+        <title>Jinsang Oh</title>
         <meta charset="utf-8">
         <link href="style.css" rel="stylesheet">
         <link href='https://fonts.googleapis.com/css?family=Optima' rel='stylesheet'>
