--- a/rashi.html
+++ b/rashi.html
@@ -9,8 +9,11 @@
         <link rel="stylesheet" href="assets/css/style.css">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <script defer src="./script.js"></script>
+        <script async src="https://kit.fontawesome.com/6cc05e1e8e.js" crossorigin="anonymous"></script>
     </head>
     <body>
+        <div class = main> 
         <h1>
             Rashi
             <img src="images/logo/paw.png" width = "60px" style = "filter: invert();">
@@ -23,27 +26,27 @@
                 <li><a href="algorithm.html"> Algorithm</a></li>
             </dl> 
             <div id = column>
-                <figure>
+                <figure class = "gallery__item">
                     <img src="images/rashi/Rashi1.jpeg" class = "photo" >
                     <figcaption>Rashi joined our family on January 15th, 2021, from a dog shelter. She has a very careful personality. We are predicting that she was born in around December, 2020.
                     </figcaption>
                 </figure>
-                <figure>
+                <figure class = "gallery__item">
                     <img src="images/rashi/Rashi3.jpeg" class = "photo">
                     <figcaption>On the first day she came to our place, it took quite awhile for her to come out of the cage.
                     </figcaption>
                 </figure>
-                <figure>
+                <figure class = "gallery__item">
                     <img src="images/rashi/Rashi2.jpeg" class = "photo">
                     <figcaption>First thing we did for her was to shave off her untrimmed hair. Her thigh looked like a chicken thigh ever since then.
                     </figcaption>
                 </figure>
-                <figure>
+                <figure class = "gallery__item">
                     <img src="images/rashi/Rashi.jpeg" class = "photo">
                     <figcaption>Later she got used to living in a new place. We even brought her to a beach.
                     </figcaption>
                 </figure>
-                    <figure>
+                    <figure class = "gallery__item">
                     <img src="images/rashi/Rashi4.jpeg" class = "photo">
                     <img src="images/rashi/Rashi5.jpeg" class = "photo">   
                     <figcaption>Hope she is enjoying her life as a member of our family 😊
@@ -53,6 +56,7 @@
                 <div class= "videoWrapper"> <iframe class = video src="https://www.youtube.com/embed/eNQgOHjNYZE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="padding-top: 5%;"></iframe></div>
             </div>
         </div>
+    </div>
         <div class="footer-dark">
             <footer>
                 <div class="container">
@@ -63,5 +67,6 @@
                 </div>
             </footer>
         </div>
+        
     </body>
 </html>
