--- a/rashi.html
+++ b/rashi.html
@@ -37,12 +37,12 @@
                     </figcaption>
                 </figure>
                 <figure class = "gallery__item">
-                    <img src="images/rashi/Rashi2.jpeg" class = "photo">
+                    <img src="images/rashi/Rashi2.jpeg" class = "photo" id = "horizontal">
                     <figcaption>First thing we did for her was to shave off her untrimmed hair. Her thigh looked like a chicken thigh ever since then.
                     </figcaption>
                 </figure>
                 <figure class = "gallery__item">
-                    <img src="images/rashi/Rashi.jpeg" class = "photo">
+                    <img src="images/rashi/Rashi.jpeg" class = "photo" id = "horizontal">
                     <figcaption>Later she got used to living in a new place. We even brought her to a beach.
                     </figcaption>
                 </figure>
