--- a/algorithm.html
+++ b/algorithm.html
@@ -11,15 +11,17 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
-        <h1>Algorithm Studies</h1> 
-        <div id = grid>
+        <h1>Algorithm Studies
             <dl>
-                <li><a href="profile.html">Profile</a></li>
-                <li><a href="photos.html">Photos</a></li>
+                <li><a href="profile.html"> Profile</a></li>
+                <li><a href="photos.html"> Photos</a></li>
                 <li><a href="rashi.html"> Rashi</a></li>
                 <li><a href="games.html"> Games</a></li>
-
+                <li><a id = "selected" href="algorithm.html"> Algorithm </a></li>
             </dl> 
+        </h1> 
+        <div id = grid>
+            
             <div id = column>
                 <figure> <img src="images/algorithm/DFS.png" width = 300px;>
                     <figcaption><span>Depth-first search (DFS)</span> is an algorithm for traversing a tree. It starts traversing from the root node and explores as far as possible along each branch before backtracking. Usually uses <span>stack</span> to find the shortest path. In geeral, DFS is faster than BFS.<br><span>Time complexity: </span> O(V+E)</figcaption>
