--- a/games.html
+++ b/games.html
@@ -12,15 +12,16 @@
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         </head>
         <h1>Games
-            <img src="images/logo/game.png" width = "60px">
-        </h1> 
-        <div id = grid>
+            <img id = "logo" src="images/logo/game.png">
             <dl>
-                <li><a href="profile.html">Profile</a></li>
-                <li><a href="photos.html">Photos</a></li>
+                <li><a href="profile.html"> Profile</a></li>
+                <li><a href="photos.html"> Photos</a></li>
                 <li><a href="rashi.html"> Rashi</a></li>
+                <li><a id = "selected" href="games.html"> Games</a></li>
                 <li><a href="algorithm.html"> Algorithm</a></li>
             </dl> 
+        </h1> 
+        <div id = grid>
         </div>
         <div class="footer-dark">
             <footer>
