--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
         <link href="style.css" rel="stylesheet">
         <link href='https://fonts.googleapis.com/css?family=Optima' rel='stylesheet'>
     </head>
+    <h1>Jinsang Oh
+        <dl>
+            <li><a href="profile.html"> Profile</a></li>
+            <li><a href="photos.html"> Photos</a></li>
+            <li><a href="rashi.html"> Rashi</a></li>
+            <li><a href="games.html"> Games</a></li>
+            <li><a href="algorithm.html"> Algorithm</a></li>
+        </dl> 
+    </h1> 
     <body>
-        <h1>Jinsang Oh</h1> 
         <div id = grid>
-            <dl>
-                <li><a href="profile.html">Profile</a></li>
-                <li><a href="photos.html">Photos</a></li>
-                <li><a href="rashi.html"> Rashi</a></li>
-                <li><a href="games.html"> Games</a></li>
-                <li><a href="algorithm.html"> Algorithm</a></li>
-            </dl> 
         </div>
     </body>
 </html>
