--- a/rashi.html
+++ b/rashi.html
@@ -16,15 +16,16 @@
         <div class = main> 
         <h1>
             Rashi
-            <img src="images/logo/paw.png" width = "60px" style = "filter: invert();">
-        </h1> 
-        <div id = grid>
+            <img id = "logo" src="images/logo/paw.png" style = "filter: invert();">
             <dl>
-                <li><a href="profile.html">Profile</a></li>
-                <li><a href="photos.html">Photos</a></li>
+                <li><a href="profile.html"> Profile</a></li>
+                <li><a href="photos.html"> Photos</a></li>
+                <li><a id = "selected" href="rashi.html"> Rashi</a></li>
                 <li><a href="games.html"> Games</a></li>
                 <li><a href="algorithm.html"> Algorithm</a></li>
             </dl> 
+        </h1> 
+        <div id = grid>
             <div id = column>
                 <figure class = "gallery__item">
                     <img src="images/rashi/Rashi1.jpeg" class = "photo" >
