--- a/photos.html
+++ b/photos.html
@@ -9,15 +9,17 @@
     </head>
     <body>
         <h1>Photos
-            <img src="images/logo/camera.png" width = "60px" style = "filter: invert();">
-        </h1> 
-        <div id = grid>
+            <img id = "logo" src="images/logo/camera.png" style = "filter: invert();">
             <dl>
-                <li><a href="profile.html">Profile</a></li>
+                <li><a href="profile.html"> Profile</a></li>
+                <li><a id = "selected" href="photos.html"> Photos</a></li>
                 <li><a href="rashi.html"> Rashi</a></li>
                 <li><a href="games.html"> Games</a></li>
                 <li><a href="algorithm.html"> Algorithm</a></li>
             </dl> 
+        </h1> 
+        <div id = grid>
+            
         </div>
     </body>
 </html>
