--- a/games.html
+++ b/games.html
@@ -22,6 +22,19 @@
             </dl> 
         </h1> 
         <div id = grid>
+            <div class = "wrapper">
+                <div clas = "game-text">
+                    <span>Game-Over!!</span>
+                <button>restart
+                </button>
+                </div>
+                <div class ="score"> 0</div>
+                <div class = "playground">
+                    <ul></ul>
+                </div>
+            </div>
+            <script src = "tetris.js" type = "module">
+            </script>
         </div>
         <div class="footer-dark">
             <footer>
